
1.2.1 Release Fixes
===================
* LDEV-3034 Remove "External Page" warning introduced in BB (BB9.1 SP12)

1.2.2 Release Fixes
===================
* LDEV-3102 Remove user call back URLs from Blackboard integration 
* LDEV-3143 Create an option to opt out from Gradecenter column

1.2.3 Release Fixes
===================
* LDEV-3176 Fix wrong URL format for starting LAMS lesson
* LDEV-2790 Use html editor for lesson description

1.2.4 Release Fixes
===================
* LDEV-3180 Load LAMS sequences on demand 
* LDEV-3217 encoding emails before sending them to LAMS 

1.2.5 Release Fixes
===================
* LDEV-3285: include lessonid in integration hash 

1.2.6 Release Fixes
===================
* LDEV-3382: Add datetime parameter check to LoginRequest

1.2.7 Release Fixes
===================
* LDEV-3402: Add "your progress" widget to the lesson page

1.2.8 Release Fixes
===================
* LDEV-3423: Fixed Exception on getting mark from LAMS server after lesson is completed
* LDEV-3424: Add new feature to integrations to be able to sync all marks in the lesson

1.2.9 Release Fixes
===================
* LDEV-3446: Join users to the lesson after it was created on a BB side

1.2.10 Release Fixes
===================
* LDEV-3473: Start supporting "Course builder" user role

1.2.11 Release Fixes
===================
* LDEV-3456: Template interface for creating boilerplate text based lessons
This module has new calls to list the sequences in the root of a user's account and to 
render a learning design image, which allows other deployment options on the Blackboard side.
Also supports calls to the LAMS server to use a dummy course to suit the templates.

1.2.12 Release Fixes
===================
* LDEV-3456: Supports deleting learning designs.
* LDEV-3513: Transform lineitemId parameter stored in some older versions to the format required now